# Microscopy-AI-Agent-Demo

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt  start_server.py
app/: app.py  config.py  main.py
app/agent/: core.py
app/api/: models.py  server.py
app/services/smart_proxy/: server_mock.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: index.html
app/tools/: experiment_framework.py  microscopy.py
app/utils/: helpers.py
tests/: check_agent.py  test_agent.py  test_api.py  test_experiment_framework.py  test_fluence_calibration_workflow.py  test_microscopy_integration.py
tests/mocks/: autoscript_tem_microscope_client.py
