[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "microscopy-ai-agent-demo"
version = "0.1.0"
dependencies = [
    "streamlit",
    "smolagents[toolkit]",
    "transformers",
    "accelerate",
    "psutil",
    "wikipedia-api",
    "twisted",
    "numpy",
    "Pyro5",
    "numba",
    "SciFiReaders",
    "sidpy",
    "scipy",
    "matplotlib",
    "scikit-image",
    "ase",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
